--- a/style.css
+++ b/style.css
@@ -1,16 +1,16 @@
-.documentIcons{ text-align: center; }
+.document-icon{ text-align: center; }
 
-.documentIcons img{
+.document-icon img{
   border: none;
 }
 
-.documentIcons a{
+.document-icon a{
   font-size: 10px;
   line-height: 12px;
 }
 
 /* WITHOUT DESCRIPTION */
-div.documentIcons{
+div.document-icon{
   float: left;
   min-height: 125px;
   max-height: 145px;
@@ -18,7 +18,7 @@ div.documentIcons{
   padding: 10px 0;
   width: 25%;
 }
-div#documentIconsWrapper hr{
+div#document-icon-wrapper hr{
   border: none;
   width: 100%;
   height: 0;
@@ -28,25 +28,25 @@ div#documentIconsWrapper hr{
 /* END WITHOUT DESCRIPTION */
 
 /* WITH DESCRIPTION */
-td.documentIcons{ width: 115px; }
-table#documentIconsWrapper{ border-collapse: collapse; }
+td.document-icon{ width: 115px; }
+table#document-icon-wrapper{ border-collapse: collapse; }
 
-table#documentIconsWrapper,
-table#documentIconsWrapper tbody,
-table#documentIconsWrapper tr,
-table#documentIconsWrapper p{
+table#document-icon-wrapper,
+table#document-icon-wrapper tbody,
+table#document-icon-wrapper tr,
+table#document-icon-wrapper p{
   width: 100%;
   padding: 0;
   margin: 0;
   border: none;
 }
 
-table#documentIconsWrapper td{
+table#document-icon-wrapper td{
   padding: 5px 4px 3px;
   vertical-align: middle;
 }
 
-table .documentIcons img{
+table .document-icon img{
   width: 65px;
   height: 65px;
 }
