--- a/style.css
+++ b/style.css
@@ -1,52 +1,51 @@
-.documentIcons{ text-align: center; }
+.document-icon{ text-align: center; }
 
-.documentIcons img{
+.document-icon img{
   border: none;
 }
 
-.documentIcons a{
+.document-icon a{
   font-size: 10px;
   line-height: 12px;
 }
 
 /* WITHOUT DESCRIPTION */
-div.documentIcons{
-  float: left;
+div.document-icon{
+  display: inline-block;
+  vertical-align: top;
   min-height: 125px;
-  max-height: 145px;
+  /*max-height: 145px;*/
   overflow: hidden;
   padding: 10px 0;
   width: 25%;
 }
-div#documentIconsWrapper hr{
-  border: none;
+div#document-icon-wrapper{
   width: 100%;
-  height: 0;
   padding: 0;
   margin: 0;
 }
 /* END WITHOUT DESCRIPTION */
 
 /* WITH DESCRIPTION */
-td.documentIcons{ width: 115px; }
-table#documentIconsWrapper{ border-collapse: collapse; }
+td.document-icon{ width: 115px; }
+table#document-icon-wrapper{ border-collapse: collapse; }
 
-table#documentIconsWrapper,
-table#documentIconsWrapper tbody,
-table#documentIconsWrapper tr,
-table#documentIconsWrapper p{
+table#document-icon-wrapper,
+table#document-icon-wrapper tbody,
+table#document-icon-wrapper tr,
+table#document-icon-wrapper p{
   width: 100%;
   padding: 0;
   margin: 0;
   border: none;
 }
 
-table#documentIconsWrapper td{
+table#document-icon-wrapper td{
   padding: 5px 4px 3px;
   vertical-align: middle;
 }
 
-table .documentIcons img{
+table .document-icon img{
   width: 65px;
   height: 65px;
 }
