Tagging 1.0.1: Fixed CSS bug
git-svn-id: https://plugins.svn.wordpress.org/document-gallery/trunk@648740 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/style.css
+++ b/style.css
@@ -11,17 +11,16 @@
 
 /* WITHOUT DESCRIPTION */
 div.document-icon{
-  float: left;
+  display: inline-block;
+  vertical-align: top;
   min-height: 125px;
-  max-height: 145px;
+  /*max-height: 145px;*/
   overflow: hidden;
   padding: 10px 0;
   width: 25%;
 }
-div#document-icon-wrapper hr{
-  border: none;
+div#document-icon-wrapper{
   width: 100%;
-  height: 0;
   padding: 0;
   margin: 0;
 }
