--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 div.document-icon{ text-align: center; }
 
 div.document-icon img{
+  max-width: 89px;
+  max-height: 89px;
   border: none;
 }
 
@@ -29,7 +31,7 @@ div.document-icon-wrapper{
 
 /* WITH DESCRIPTION */
 div.descriptions.document-icon-wrapper div.document-icon{ 
-  width: 115px;
+  max-width: 115px;
   padding: 0;
   padding-right: 3px;
   float: left;
@@ -41,8 +43,8 @@ div.descriptions.document-icon-wrapper{
 }
 
 div.descriptions.document-icon-wrapper img{
-  width: 65px;
-  height: 65px;
+  max-width: 65px;
+  max-height: 65px;
 }
 
 /* clearfix */
