Committing version 1.4 to trunk. Includes complete rewrite to OOP style, improved input sanitization, and category/taxonomy support.
git-svn-id: https://plugins.svn.wordpress.org/document-gallery/trunk@762746 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ div.document-icon{
 div.document-icon-wrapper{
   width: 100%;
   padding: 0;
-  text-align: center;
+  text-align: left;
 }
 /* END WITHOUT DESCRIPTION */
 
