--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -77,6 +77,19 @@ th.bottomRight{
 .deleteSelected:before{
    content: '\f182';
 }
+#ThumbsTable .title a:after{
+   content: '\f504';
+   display: inline-block;
+   -webkit-font-smoothing: antialiased;
+   font-family: 'dashicons';
+   font-size: inherit;
+   font-style: normal;
+   font-variant: normal;
+   font-weight: normal;
+   line-height: 1;
+   vertical-align: inherit;
+   padding-left: 5px;
+}
 th input{
    margin-left: 0 !important;
    margin-top: 1px !important;
