* Added option to validate options structure on save * Unnested "defaults" branch inside "gallery" * Removed usages of json_encode() to avoid some platforms having issues * Fixed bug where attachment URLs in thumbnail table didn't work when WP home wasn't the root of the domain * Moved dimensions options to the general settings page (from advanced) * Added styling and additional text to options dump on advanced tab to indicate it is readonly. Also added JS to select the textbox contents when user clicks for ease of copying contents.
git-svn-id: https://plugins.svn.wordpress.org/document-gallery/trunk@971492 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -101,3 +101,7 @@ th input{
 td input{
    margin-right: 0 !important;
 }
+
+textarea[readonly], input[readonly], select[readonly] {
+   background-color: #dcdcdc;
+}
