* Addressed issue #7 (https://github.com/thenadz/document-gallery/issues/7) -- thumbnail generation timeoue is now configurable * Added some additional groundwork to support a "Logging" tab on the settings page
git-svn-id: https://plugins.svn.wordpress.org/document-gallery/trunk@971573 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -75,6 +75,9 @@ th.bottomRight{
 .Thumbnail-tab:before{
    content: '\f233';
 }
+.Logging-tab:before{
+   content: '\f163';
+}
 .Advanced-tab:before{
    content: '\f332';
 }
