--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,8 @@
 div.document-icon{ text-align: center; }
 
 div.document-icon img{
-  max-width: 89px;
-  max-height: 89px;
+  width: 89px;
+  max-width: 100%;
   border: none;
 }
 
@@ -18,9 +18,6 @@ div.document-icon{
   display: inline-block;
   vertical-align: top;
   overflow: hidden;
-  /* percents round up in some browsers, making
-  only 3 icons fit per line so can't use 25% */
-  width: 24.5%;
 }
 div.document-icon-wrapper{
   width: 100%;
@@ -43,8 +40,8 @@ div.descriptions.document-icon-wrapper{
 }
 
 div.descriptions.document-icon-wrapper img{
-  max-width: 65px;
-  max-height: 65px;
+  width: 65px;
+  max-width: 100%;
 }
 
 /* clearfix */
