* Merging in Demur's Media Manager enhancement * Splitting document-gallery into two files (DocumentGallery class is now in *-class file)
git-svn-id: https://plugins.svn.wordpress.org/document-gallery/trunk@1131607 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -468,3 +468,22 @@ td.column-title input {
    background-color: #9b9b9b;;
    -webkit-border-radius: 5px;
 }
+.document-gallery-settings label.setting {
+   margin: 2px 0;
+}
+.document-gallery-settings label.setting table {
+   width: 100%;
+   padding-right: 8px;
+}
+.document-gallery-settings label.setting table tr td:last-of-type, .document-gallery-settings label.setting table tr td:last-of-type * {
+   text-align: right !important;
+   float: none !important;
+   margin: auto 0 !important;
+}
+.document-gallery-settings label.setting table tr td:last-of-type select {
+   max-width: none !important;
+}
+.document-gallery-settings label.setting table tr td span {
+   text-align: left !important;
+   float: none !important;
+}
