Adding waiting indicator during request for thumbnail(s) deleting
git-svn-id: https://plugins.svn.wordpress.org/document-gallery/trunk@1183948 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -530,11 +530,19 @@ td .dashicons-edit, .edit-controls .dashicons-update {
     cursor: default;
 }
 
-.edit-controls.waiting .dashicons-update {
+.edit-controls.waiting .dashicons-update, .deleteSelected.waiting:before {
     display: block;
     -webkit-animation: spin 1s linear infinite;
     -moz-animation: spin 1s linear infinite;
     animation: spin 1s linear infinite;
+}
+
+.deleteSelected.waiting:before {
+    content: '\f463';
+    width: auto;
+    height: auto;
+    display: inline-block;
+    padding: 0;
 }
 
 @-moz-keyframes spin {
